# hearts

./: .gitignore  Caddyfile  Dockerfile  app.py  auth.py  bot.py  compose.yaml  config.py  justfile  models.py  pyproject.toml  requirements.txt  routes.py  ws.py
minihearts/: Dockerfile  index.html  jsconfig.json  package.json  vite.config.mjs
minihearts/src/: App.vue
minihearts/src/assets/: card.css  cards.css
minihearts/src/assets/PNG-cards-1.3/: test.html
minihearts/src/assets/SVG-cards-1.3/: test.html
minihearts/src/assets/svg/: test.html
minihearts/src/components/: Chat.vue  Game.vue  Lobby.vue
minihearts/src/plugins/: index.js
